[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mastermind"
version = "0.1.0"
description = "A Mastermind game implementation"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]